--- a/templates/index.html
+++ b/templates/index.html
@@ -109,6 +109,10 @@
                     <input type="radio" id="yetzalia" name="doctora" value="yetzalia">
                     <label for="yetzalia">Dra. Yetzalia</label>
                 </div>
+                <div class="radio-option">
+                    <input type="radio" id="teran" name="doctora" value="teran">
+                    <label for="teran">Dr. Terán</label>
+                </div>
             </div>
 
             <button type="submit">Firmar Documentos</button>
