--- a/templates/index.html
+++ b/templates/index.html
@@ -113,6 +113,10 @@
                     <input type="radio" id="teran" name="doctora" value="teran">
                     <label for="teran">Dr. Terán</label>
                 </div>
+                <div class="radio-option">
+                    <input type="radio" id="sara" name="doctora" value="sara">
+                    <label for="sara">Dra. Sara</label>
+                </div>
             </div>
 
             <button type="submit">Firmar Documentos</button>
