--- a/templates/index.html
+++ b/templates/index.html
@@ -117,6 +117,10 @@
                     <input type="radio" id="sara" name="doctora" value="sara">
                     <label for="sara">Dra. Sara</label>
                 </div>
+                <div class="radio-option">
+                    <input type="radio" id="valderas" name="doctora" value="valderas">
+                    <label for="valderas">Dra. Valderas</label>
+                </div>
             </div>
 
             <button type="submit">Firmar Documentos</button>
