--- a/templates/index.html
+++ b/templates/index.html
@@ -121,6 +121,10 @@
                     <input type="radio" id="valderas" name="doctora" value="valderas">
                     <label for="valderas">Dra. Valderas</label>
                 </div>
+                <div class="radio-option">
+                    <input type="radio" id="simon" name="doctora" value="simon">
+                    <label for="simon">Dr. Simón</label>
+                </div>
             </div>
 
             <button type="submit">Firmar Documentos</button>
