--- a/templates/index.html
+++ b/templates/index.html
@@ -89,43 +89,47 @@
             <input type="file" name="pdfs" multiple accept=".pdf" required>
 
             <div class="radio-group" id="firma-options">
-                <div class="radio-option">
-                    <input type="radio" id="priscilla" name="doctora" value="priscilla" required>
-                    <label for="priscilla">Dra. Priscilla</label>
-                </div>
-                <div class="radio-option">
-                    <input type="radio" id="adriana" name="doctora" value="adriana">
-                    <label for="adriana">Dra. Adriana</label>
-                </div>
-                <div class="radio-option">
-                    <input type="radio" id="yngrid" name="doctora" value="yngrid">
-                    <label for="yngrid">Dra. Yngrid</label>
-                </div>
-                <div class="radio-option">
-                    <input type="radio" id="carolina" name="doctora" value="carolina">
-                    <label for="carolina">Dra. Carolina</label>       
-                </div>
-                <div class="radio-option">
-                    <input type="radio" id="yetzalia" name="doctora" value="yetzalia">
-                    <label for="yetzalia">Dra. Yetzalia</label>
-                </div>
-                <div class="radio-option">
-                    <input type="radio" id="teran" name="doctora" value="teran">
-                    <label for="teran">Dr. Terán</label>
-                </div>
-                <div class="radio-option">
-                    <input type="radio" id="sara" name="doctora" value="sara">
-                    <label for="sara">Dra. Sara</label>
-                </div>
-                <div class="radio-option">
-                    <input type="radio" id="valderas" name="doctora" value="valderas">
-                    <label for="valderas">Dra. Valderas</label>
-                </div>
-                <div class="radio-option">
-                    <input type="radio" id="simon" name="doctora" value="simon">
-                    <label for="simon">Dr. Simón</label>
-                </div>
-            </div>
+    <div class="radio-option">
+        <input type="radio" id="priscilla" name="doctora" value="priscilla" required>
+        <label for="priscilla">Dra. Priscilla</label>
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="adriana" name="doctora" value="adriana">
+        <label for="adriana">Dra. Adriana</label>
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="yngrid" name="doctora" value="yngrid">
+        <label for="yngrid">Dra. Yngrid</label>
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="carolina" name="doctora" value="carolina">
+        <label for="carolina">Dra. Carolina</label>       
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="yetzalia" name="doctora" value="yetzalia">
+        <label for="yetzalia">Dra. Yetzalia</label>
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="teran" name="doctora" value="teran">
+        <label for="teran">Dr. Terán</label>
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="sara" name="doctora" value="sara">
+        <label for="sara">Dra. Sara</label>
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="valderas" name="doctora" value="valderas">
+        <label for="valderas">Dra. Valderas</label>
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="simon" name="doctora" value="simon">
+        <label for="simon">Dr. Simón</label>
+    </div>
+    <div class="radio-option">
+        <input type="radio" id="timbre_adriana" name="doctora" value="Timbre Adriana">
+        <label for="timbre_adriana">Timbre Adriana</label>
+    </div>
+</div>
 
             <button type="submit">Firmar Documentos</button>
         </form>
