--- a/templates/index.html
+++ b/templates/index.html
@@ -129,6 +129,10 @@
                     <input type="radio" id="timbre_adriana" name="doctora" value="Timbre Adriana">
                     <label for="timbre_adriana">Timbre Adriana</label>
                 </div>
+                <div class="radio-option">
+                    <input type="radio" id="maribel" name="doctora" value="maribel">
+                    <label for="maribel">Dra. Maribel</label>
+                </div>
             </div>
 
             <button type="submit">Firmar Documentos</button>
